--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+--find-links https://download.pytorch.org/whl/cu124
+torch
+torchvision
+torchaudio
 numpy
 opencv-python
 matplotlib
 tqdm
 pypylon
 ruff
+ipykernel
 onnxruntime-gpu
+open3d
